# really_estate

./: pyproject.toml
data_exploration/: zillow_scraper.ipynb
data_flows/: aws_prefect_flow_test.py  notes.txt  scrape_zillow_flow.py
data_flows_output/: 2022-11-30_zillow_scrape_output.csv  2022-12-03_zillow_scrape_output.csv
modal_loves_me/: modal_bigquery.py  modal_scrape_zillow_flow.py  presidents.py  test_google_storage.py  test_google_storage_2.py
tests/: test_really_estate.py
